Fixed alignment of elements in CSS

--- a/src/style.css
+++ b/src/style.css
@@ -22,14 +22,14 @@ ul {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 10.5px;
+  font-size: 10px;
   font-weight: 200;
   line-height: 18px;
   list-style: none;
   text-align: right;
   position: relative;
   bottom: 128px;
-  right: 18px;
+  right: 25px;
 }
 
 .container {
@@ -56,7 +56,7 @@ ul {
 }
 
 .search-city-form {
-  padding: 10px 33px;
+  padding: 10px 28px;
 }
 
 .form-control {
@@ -69,13 +69,13 @@ ul {
 .search-city-button {
   border-radius: 9px;
   position: relative;
-  right: 50px;
+  right: 57px;
 }
 
 .geolocation-button {
   border-radius: 9px;
   position: relative;
-  right: 69px;
+  right: 75px;
 }
 
 .search-city-button,
@@ -96,12 +96,12 @@ ul {
 
 .temperature-units {
   color: white;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 100;
   text-align: right;
   position: relative;
   bottom: 35px;
-  right: 20px;
+  right: 25px;
 }
 
 #celsius-link,
@@ -197,7 +197,7 @@ ul {
 .hr-1,
 .hr-2 {
   color: white;
-  margin: -3px 26px 25px 30px;
+  margin: -3px 25px 25px 25px;
   max-width: 600px;
 }
 
@@ -209,7 +209,7 @@ ul {
   font-size: 12px;
   font-weight: 200;
   line-height: 31px;
-  margin: -20px 30px 20px;
+  margin: -20px 31px 20px 30px;
   text-align: center;
 }
 
